# bietcicddemo

./: CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
include/: utils.h
src/c/: main.c
src/tests/: test_utils.c
